change snpeff to transcript match

--- a/nbs_genes/nbs_genes_91515.ipynb
+++ b/nbs_genes/nbs_genes_91515.ipynb
@@ -42,32 +42,6 @@
      ]
     },
     {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "Enter your search paramaters below. \n",
-      "\n",
-      "Sample ID (sample_list)   \n",
-      "\n",
-      "- Enter a list of exact sample id's as comma_separated values, in the following format:  \n",
-      "\n",
-      "    - sample_list = '101-223-02','102-335-01'   \n",
-      "- Or you can upload a txt file of sample id's, with each id on a separate line  \n",
-      "- To search in all sample id's, enter 'all': \n",
-      "    - sample_list = 'all'\n",
-      "\n",
-      "Trio member and/or wildcard searching (trio_member)  \n",
-      "\n",
-      "- Enter a list of family members to search,as comma_separated values, in the following format:  \n",
-      "  - trio_member = 'NB','M','F'   \n",
-      "- To search for all family members, including extended, enter 'all':   \n",
-      "   - trio_member = 'all'  \n",
-      "- You can also use this list to peform wildcard searches, for example, all trio members LIKE '101-225%':  \n",
-      "    - trio_member = 'NB','M','101-225%'\n",
-      "\n"
-     ]
-    },
-    {
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
@@ -82,20 +56,13 @@
       "###############\n",
       "## family id ##\n",
       "###############\n",
-      "# uncomment for list \n",
-      "#sample_list = '102-07005-01','102-00997-01'\n",
       "sample_list = 'all'\n",
-      "\n",
-      "# uncomment to read in txt file\n",
-      "# samples = open('your_samples.txt', 'r').readlines()\n",
-      "#sample_list = \"'\" + \"','\".join(map(str.strip, samples))+ \"'\"\n",
       "\n",
       "####################\n",
       "## trio member(s) ##\n",
       "####################\n",
       "# enter as NB, M, and/or F, or 'all' to include extended family if available\n",
       "trio_member = 'NB','M','F'\n",
-      "#trio_member = 'all'\n",
       "\n",
       "################\n",
       "## dann_score ##\n",
@@ -111,9 +78,9 @@
       "# enter database.name for variant table\n",
       "variant_table = 'p7_platform.brady_variant'\n",
       "# enter database.name of kaviar table\n",
-      "kaviar_table = 'public_hg19.kaviar'\n",
+      "kaviar_table = 'p7_ref_grch37.kaviar'\n",
       "# enter database.name of clinvar table\n",
-      "clinvar_table = 'public_hg19.clinvar'\n",
+      "clinvar_table = 'p7_ref_grch37.clinvar'\n",
       "# enter database.name of dann table\n",
       "dbnfsp_table = 'p7_ref_grch37.dbnsfp_variant'\n",
       "\n",
@@ -129,10 +96,10 @@
       "snpeff_path = '/Users/selasady/tools/snpEff/snpEff.jar'\n",
       "\n",
       "# enter desired basename for output files\n",
-      "out_name = 'nbs_genes'"
+      "out_name = 'nbs_091515'"
      ],
      "language": "python",
-     "prompt_number": 1
+     "prompt_number": 24
     },
     {
      "cell_type": "heading",
@@ -238,7 +205,7 @@
       "    subject_statement = ''"
      ],
      "language": "python",
-     "prompt_number": 2
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -254,7 +221,32 @@
       "conn=connect(host='glados19', port=21050)"
      ],
      "language": "python",
-     "prompt_number": 3
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      "# open connection, run query, close connection \n",
+      "def run_query(query_name, remove_name):\n",
+      "    # create connection object\n",
+      "    conn=connect(host='glados19', port=21050, timeout=120)\n",
+      "    # drop table if it exists\n",
+      "    cur = conn.cursor()\n",
+      "    print 'Removing table if it already exists...'\n",
+      "    cur.execute('DROP TABLE IF EXISTS {}.{}_{}'.format(out_db,out_name,remove_name))\n",
+      "    # run query \n",
+      "    print 'Running the following query on impala: \\n' + query_name\n",
+      "    cur.execute(query_name)\n",
+      "    cur.execute('COMPUTE STATS {}.{}_{}'.format(out_db,out_name, remove_name))\n",
+      "    print 'Query finished. Closing connection.'\n",
+      "    cur.close()\n",
+      "    conn.close()"
+     ],
+     "language": "python",
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -265,7 +257,14 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Running the following query on impala: \n\n\n    CREATE TABLE users_selasady.nbs_kaviar AS         \n          WITH bv as (\n              SELECT bv.sample_id, bv.chr as chrom, bv.pos, bv.id, bv.ref, \n                  bv.alt, bv.qual, bv.filter, regexp_replace(gt, '1/2', '0/1') as geno, k.alle_freq,  \n                  CASE WHEN k.alle_freq < .03 then 'Y'\n                  WHEN (k.alle_freq IS NULL AND (length(bv.alt) = 1)) then 'Y'\n                  ELSE 'N'\n                  END as kaviar_rare\n             FROM p7_platform.brady_variant bv\n             LEFT JOIN /* +SHUFFLE */ public_hg19.kaviar k\n                  ON bv.chr = k.chromosome\n                  AND bv.pos = k.pos\n                  AND bv.alt = k.alt\n            WHERE (bv.chr <> 'X' AND bv.chr <> 'Y')\n             AND (bv.sample_id LIKE '%03' OR bv.sample_id LIKE '%01' OR bv.sample_id LIKE '%02')\n         )\n        SELECT DISTINCT bv.*, nbs.gene, nbs.entrez_gene_id, nbs.condition, nbs.mrna,\n            nbs.omim_phenotype, nbs.va_name, nbs.inheritance, nbs.allelic_condition,nbs.in_pgb, \n            nbs.level, nbs.comments          \n       FROM bv, users_selasady.nbs_ucsc nbs\n       WHERE bv.chrom = nbs.chrom\n       AND bv.pos BETWEEN nbs.txstart and nbs.txend\n       \nQuery finished. Please note that the 1/2 genotype was converted to 0/1 for downstream compatibility. \n Closing connection."
+        "Removing table if it already exists...\nRunning the following query on impala: \n\n\n    CREATE TABLE users_selasady.nbs_091515_kaviar AS         \n          WITH bv as (\n             SELECT bv.sample_id, bv.chrom, bv.pos, bv.id, bv.ref, \n                  bv.alt, bv.qual, bv.filter, regexp_replace(gt, '1/2', '0/1') as geno, k.allele_freq,  \n                  CASE WHEN (k.allele_freq < .03 OR k.allele_freq IS NULL )then 'Y'\n                  ELSE 'N'\n                  END as kaviar_rare\n             FROM p7_platform.brady_variant bv\n             LEFT JOIN /* +SHUFFLE */ p7_ref_grch37.kaviar k\n                  ON bv.chrom = k.chrom\n                  AND bv.pos = k.pos\n                  AND bv.ref = k.ref\n                  AND bv.alt = k.alt\n            WHERE (bv.chrom <> 'X' AND bv.chrom <> 'Y')\n             AND (bv.sample_id LIKE '%03' OR bv.sample_id LIKE '%01' OR bv.sample_id LIKE '%02')\n         )\n        SELECT DISTINCT bv.*, nbs.gene, nbs.entrez_gene_id, nbs.condition, nbs.mrna,\n            nbs.omim_phenotype, nbs.va_name, nbs.inheritance, nbs.allelic_condition,nbs.in_pgb, \n            nbs.level, nbs.comments          \n       FROM bv, users_selasady.nbs_ucsc nbs\n       WHERE bv.chrom = nbs.chrom\n       AND bv.pos BETWEEN nbs.txstart and nbs.txend\n       "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\nQuery finished. Closing connection."
        ]
       },
       {
@@ -280,19 +279,20 @@
       "# create kaviar query\n",
       "kaviar_query = '''\n",
       "\n",
-      "    CREATE TABLE {}.nbs_kaviar AS         \n",
+      "    CREATE TABLE {}.{}_kaviar AS         \n",
       "          WITH bv as (\n",
-      "              SELECT bv.sample_id, bv.chr as chrom, bv.pos, bv.id, bv.ref, \n",
-      "                  bv.alt, bv.qual, bv.filter, regexp_replace(gt, '1/2', '0/1') as geno, k.alle_freq,  \n",
-      "                  CASE WHEN (k.allele_freq < {} OR k.allele_freq IS NULL)then 'Y'\n",
+      "             SELECT bv.sample_id, bv.chrom, bv.pos, bv.id, bv.ref, \n",
+      "                  bv.alt, bv.qual, bv.filter, regexp_replace(gt, '1/2', '0/1') as geno, k.allele_freq,  \n",
+      "                  CASE WHEN (k.allele_freq < {} OR k.allele_freq IS NULL )then 'Y'\n",
       "                  ELSE 'N'\n",
       "                  END as kaviar_rare\n",
       "             FROM {} bv\n",
       "             LEFT JOIN /* +SHUFFLE */ {} k\n",
-      "                  ON bv.chr = k.chromosome\n",
+      "                  ON bv.chrom = k.chrom\n",
       "                  AND bv.pos = k.pos\n",
+      "                  AND bv.ref = k.ref\n",
       "                  AND bv.alt = k.alt\n",
-      "            WHERE (bv.chr <> 'X' AND bv.chr <> 'Y')\n",
+      "            WHERE (bv.chrom <> 'X' AND bv.chrom <> 'Y')\n",
       "            {}\n",
       "         )\n",
       "        SELECT DISTINCT bv.*, nbs.gene, nbs.entrez_gene_id, nbs.condition, nbs.mrna,\n",
@@ -301,26 +301,13 @@
       "       FROM bv, {}.nbs_ucsc nbs\n",
       "       WHERE bv.chrom = nbs.chrom\n",
       "       AND bv.pos BETWEEN nbs.txstart and nbs.txend\n",
-      "       '''.format(out_db, kav_freq, variant_table, kaviar_table, subject_statement, out_db)\n",
-      "\n",
-      "# open connection, run query, close connection \n",
-      "def run_query(query_name, db_name):\n",
-      "    # drop table if it exists\n",
-      "    cur = conn.cursor()\n",
-      "    cur.execute('DROP TABLE IF EXISTS {}.{}'.format(out_db,db_name))\n",
-      "    cur.close()\n",
-      "    # run query \n",
-      "    print 'Running the following query on impala: \\n' + query_name\n",
-      "    cur = conn.cursor()\n",
-      "    cur.execute(query_name)\n",
-      "    print 'Query finished. Please note that the 1/2 genotype was converted to 0/1 for downstream compatibility. \\n Closing connection.'\n",
-      "    cur.close()\n",
+      "       '''.format(out_db, out_name, kav_freq, variant_table, kaviar_table, subject_statement, out_db)\n",
       "\n",
       "# run kaviar annotation query\n",
-      "run_query(kaviar_query, 'nbs_kaviar')"
+      "run_query(kaviar_query, 'kaviar')"
      ],
      "language": "python",
-     "prompt_number": 66
+     "prompt_number": 10
     },
     {
      "cell_type": "heading",
@@ -348,7 +335,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Running the following query on impala: \n\n        CREATE TABLE IF NOT EXISTS users_selasady.nbs_annotated AS \n        WITH nbs as (\n             SELECT DISTINCT nbs.*, clin.clin_hgvs, clin.clin_sig, clin.clin_dbn,\n                 CASE WHEN (clin.clin_sig NOT REGEXP '3|2[^5]|2$'  \n                     AND  clin.clin_sig REGEXP '4|[^25]5|^5') THEN 'Y'\n                     ELSE 'N'\n                 END AS clin_patho\n             FROM users_selasady.nbs_kaviar nbs\n             LEFT JOIN public_hg19.clinvar clin\n                 ON nbs.chrom = clin.chrom\n                 AND nbs.pos = clin.pos\n                 AND nbs.alt = clin.alt\n          )\n\n        SELECT DISTINCT nbs.*, db.aa_alt, db.sift_score, db.sift_pred, db.polyphen2_hdiv_score,\n            db.polyphen2_hdiv_pred, db.polyphen2_hvar_score, db.polyphen2_hvar_pred, \n            db.fathmm_score, db.fathmm_pred, db.cadd_raw, db.dann_score, db.mutation_taster_pred,\n            db.mutation_assessor_score, mutation_assessor_pred, db.provean_score, db.provean_pred,\n            db.clinvar_clnsig, db.interpro_domain, db.exac_af,\n            CASE\n                WHEN SUBSTRING(nbs.sample_id, -2) = '01'THEN 'M'\n                WHEN SUBSTRING(nbs.sample_id, -2) = '02' THEN 'F'\n                WHEN SUBSTRING(nbs.sample_id, -2) = '03'THEN 'NB'\n                END as member,\n             CASE\n                WHEN (db.sift_pred LIKE '%D%' or db.polyphen2_hdiv_pred LIKE '%D%' or db.mutation_taster_pred LIKE '%D%'\n                     or db.mutation_assessor_pred LIKE '%H%' or db.fathmm_pred LIKE '%D%' or db.provean_pred LIKE '%D%') THEN 'Y'\n                ELSE 'N'\n                END as dbnfsp_predicted,\n            SUBSTRING(nbs.sample_id, 1, (length(nbs.sample_id)-3)) as family_id,\n            CONCAT(nbs.chrom, ':', CAST(nbs.pos AS STRING), ':', nbs.ref, ':', nbs.alt) as var_id \n        FROM nbs, p7_ref_grch37.dbnsfp_variant db\n            WHERE nbs.chrom = db.chrom\n            AND nbs.pos = db.pos\n            AND nbs.alt = db.alt\n            \nQuery finished. Please note that the 1/2 genotype was converted to 0/1 for downstream compatibility. \n Closing connection."
+        "Removing table if it already exists...\nRunning the following query on impala: \n\n        CREATE TABLE IF NOT EXISTS users_selasady.nbs_091515_annotated AS \n        WITH nbs as (\n             SELECT DISTINCT nbs.*, clin.clin_hgvs, clin.clin_sig, clin.clin_dbn,\n                 CASE WHEN (clin.clin_sig NOT REGEXP '3|2[^5]|2$'  \n                     AND  clin.clin_sig REGEXP '4|[^25]5|^5') THEN 'Y'\n                     ELSE 'N'\n                 END AS clin_patho\n             FROM users_selasady.nbs_091515_kaviar nbs\n             LEFT JOIN p7_ref_grch37.clinvar clin\n                 ON nbs.chrom = clin.chrom\n                 AND nbs.pos = clin.pos\n                 AND nbs.alt = clin.alt\n          )\n\n        SELECT DISTINCT nbs.*, db.aa_alt, db.sift_score, db.sift_pred, db.polyphen2_hdiv_score,\n            db.polyphen2_hdiv_pred, db.polyphen2_hvar_score, db.polyphen2_hvar_pred, \n            db.fathmm_score, db.fathmm_pred, db.cadd_raw, db.dann_score, db.mutation_taster_pred,\n            db.mutation_assessor_score, mutation_assessor_pred, db.provean_score, db.provean_pred,\n            db.clinvar_clnsig, db.interpro_domain, db.exac_af,\n            CASE\n                WHEN SUBSTRING(nbs.sample_id, -2) = '01'THEN 'M'\n                WHEN SUBSTRING(nbs.sample_id, -2) = '02' THEN 'F'\n                WHEN SUBSTRING(nbs.sample_id, -2) = '03'THEN 'NB'\n                END as member,\n             CASE\n                WHEN (db.sift_pred LIKE '%D%' or db.polyphen2_hdiv_pred LIKE '%D%' or db.mutation_taster_pred LIKE '%D%'\n                     or db.mutation_assessor_pred LIKE '%H%' or db.fathmm_pred LIKE '%D%' or db.provean_pred LIKE '%D%'\n                     or db.dann_score >= 0.96) THEN 'Y'\n                ELSE 'N'\n                END as dbnfsp_predicted,\n            SUBSTRING(nbs.sample_id, 1, (length(nbs.sample_id)-3)) as family_id,\n            CONCAT(nbs.chrom, ':', CAST(nbs.pos AS STRING), ':', nbs.ref, ':', nbs.alt) as var_id \n        FROM nbs, p7_ref_grch37.dbnsfp_variant db\n            WHERE nbs.chrom = db.chrom\n            AND nbs.pos = db.pos\n            AND nbs.alt = db.alt\n            \nQuery finished. Closing connection."
        ]
       },
       {
@@ -361,14 +348,14 @@
      ],
      "input": [
       "dbnsfp_query = '''\n",
-      "        CREATE TABLE IF NOT EXISTS {}.nbs_annotated AS \n",
+      "        CREATE TABLE IF NOT EXISTS {}.{}_annotated AS \n",
       "        WITH nbs as (\n",
       "             SELECT DISTINCT nbs.*, clin.clin_hgvs, clin.clin_sig, clin.clin_dbn,\n",
       "                 CASE WHEN (clin.clin_sig NOT REGEXP '3|2[^5]|2$'  \n",
       "                     AND  clin.clin_sig REGEXP '4|[^25]5|^5') THEN 'Y'\n",
       "                     ELSE 'N'\n",
       "                 END AS clin_patho\n",
-      "             FROM {}.nbs_kaviar nbs\n",
+      "             FROM {}.{}_kaviar nbs\n",
       "             LEFT JOIN {} clin\n",
       "                 ON nbs.chrom = clin.chrom\n",
       "                 AND nbs.pos = clin.pos\n",
@@ -387,7 +374,8 @@
       "                END as member,\n",
       "             CASE\n",
       "                WHEN (db.sift_pred LIKE '%D%' or db.polyphen2_hdiv_pred LIKE '%D%' or db.mutation_taster_pred LIKE '%D%'\n",
-      "                     or db.mutation_assessor_pred LIKE '%H%' or db.fathmm_pred LIKE '%D%' or db.provean_pred LIKE '%D%') THEN 'Y'\n",
+      "                     or db.mutation_assessor_pred LIKE '%H%' or db.fathmm_pred LIKE '%D%' or db.provean_pred LIKE '%D%'\n",
+      "                     or db.dann_score >= {}) THEN 'Y'\n",
       "                ELSE 'N'\n",
       "                END as dbnfsp_predicted,\n",
       "            SUBSTRING(nbs.sample_id, 1, (length(nbs.sample_id)-3)) as family_id,\n",
@@ -396,13 +384,13 @@
       "            WHERE nbs.chrom = db.chrom\n",
       "            AND nbs.pos = db.pos\n",
       "            AND nbs.alt = db.alt\n",
-      "            '''.format(out_db, out_db, clinvar_table, dbnfsp_table)\n",
+      "            '''.format(out_db, out_name, out_db, out_name, clinvar_table, dann_score, dbnfsp_table)\n",
       "\n",
       "# run dbNFSP query on impala\n",
-      "run_query(dbnsfp_query, 'nbs_annotated')"
+      "run_query(dbnsfp_query, 'annotated')"
      ],
      "language": "python",
-     "prompt_number": 67
+     "prompt_number": 11
     },
     {
      "cell_type": "heading",
@@ -425,8 +413,8 @@
       "\n",
       "# query to left join nbs_annotated variants with DANN scores\n",
       "nbs_query = \"\"\"\n",
-      "    SELECT * FROM {}.nbs_annotated\n",
-      "    \"\"\".format(out_db)\n",
+      "    SELECT * FROM {}.{}_annotated\n",
+      "    \"\"\".format(out_db, out_name)\n",
       "# run query on impala\n",
       "cur = conn.cursor()\n",
       "cur.execute(nbs_query)\n",
@@ -436,7 +424,7 @@
       "cur.close()"
      ],
      "language": "python",
-     "prompt_number": 68
+     "prompt_number": 23
     },
     {
      "cell_type": "code",
@@ -458,7 +446,7 @@
       "    print \"No variants located in NBS regions.\""
      ],
      "language": "python",
-     "prompt_number": 69
+     "prompt_number": 26
     },
     {
      "cell_type": "heading",
@@ -498,10 +486,10 @@
       "        # write to file for conversion to vcf\n",
       "        df.to_csv(tsv_outname, header=True, encoding='utf-8', sep=\"\\t\", index=False)\n",
       "        # run tab2vcf and upon success, run snpeff\n",
-      "        vcf_process = subp.Popen(['python', 'tab2vcf.py', tsv_outname])\n",
+      "        vcf_process = subp.Popen(['python', './nbs_genes/tab2vcf.py', tsv_outname])\n",
       "        vcf_process.wait()\n",
       "        # command to run snpeff \n",
-      "        snpeff_cmd = 'java -Xmx4g -jar {} -v GRCh37.75 {} > nbs_snpeff.vcf'.format(snpeff_path, vcf_outname)\n",
+      "        snpeff_cmd = 'java -Xmx4g -jar {} -v GRCh37.75 {} > {}_snpeff.vcf'.format(snpeff_path, vcf_outname, out_name)\n",
       "        # run snpeff on vcf file\n",
       "        snpeff_process = subp.Popen(snpeff_cmd, shell=True)\n",
       "        snpeff_process.wait()\n",
@@ -515,7 +503,7 @@
       "    print str(e)"
      ],
      "language": "python",
-     "prompt_number": 70
+     "prompt_number": 22
     },
     {
      "cell_type": "markdown",
