--- a/nbs_genes/nbs_genes_clarity.ipynb
+++ b/nbs_genes/nbs_genes_clarity.ipynb
@@ -103,7 +103,7 @@
       "out_name = 'clarity_nbs'"
      ],
      "language": "python",
-     "prompt_number": 173
+     "prompt_number": 1
     },
     {
      "cell_type": "heading",
@@ -182,7 +182,7 @@
       "    subject_statement = ''"
      ],
      "language": "python",
-     "prompt_number": 174
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -195,7 +195,7 @@
       "from impala.util import as_pandas"
      ],
      "language": "python",
-     "prompt_number": 175
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -220,7 +220,7 @@
       "    conn.close()"
      ],
      "language": "python",
-     "prompt_number": 176
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -376,7 +376,8 @@
       "                END as member,\n",
       "            CASE\n",
       "                WHEN (db.sift_pred LIKE '%D%' or db.polyphen2_hdiv_pred LIKE '%D%' or db.mutation_taster_pred LIKE '%D%'\n",
-      "                     or db.mutation_assessor_pred LIKE '%H%' or db.fathmm_pred LIKE '%D%' or db.provean_pred LIKE '%D%') THEN 'Y'\n",
+      "                     or db.mutation_assessor_pred LIKE '%H%' or db.fathmm_pred LIKE '%D%' or db.provean_pred LIKE '%D%' \n",
+      "                     or db.dann_score >= {}) THEN 'Y'\n",
       "                ELSE 'N'\n",
       "                END as dbnfsp_predicted,\n",
       "            CONCAT(nbs.chrom, ':', CAST(nbs.pos AS STRING), ':', nbs.ref, ':', nbs.alt) as var_id \n",
@@ -384,7 +385,7 @@
       "            WHERE nbs.chrom = db.chrom\n",
       "            AND nbs.pos = db.pos\n",
       "            AND nbs.alt = db.alt\n",
-      "            '''.format(out_db, out_name, out_db, out_name, clinvar_table, sample_case_list, dbnfsp_table)\n",
+      "            '''.format(out_db, out_name, out_db, out_name, clinvar_table, sample_case_list, dann_score, dbnfsp_table)\n",
       "\n",
       "# run dbNFSP query on impala\n",
       "run_query(dbnsfp_query, 'annotated')"
@@ -613,9 +614,8 @@
      ],
      "input": [
       "# label variants considered pathogenic \n",
-      "nbs_annot['predictive'] = (nbs_annot['clin_patho'] == 'Y') | ((nbs_annot['kaviar_rare'] == 'Y') & \n",
-      "                            ((nbs_annot['impact'] == 'HIGH') | (nbs_annot['dbnfsp_predicted'] == 'Y') | \n",
-      "                            (nbs_annot['dann_score'] >= float(dann_score))))\n",
+      "nbs_annot['predictive'] = ((nbs_annot['clin_patho'] == 'Y') | ((nbs_annot['kaviar_rare'] == 'Y') & \n",
+      "                            ((nbs_annot['impact'] == 'HIGH') | (nbs_annot['dbnfsp_predicted'] == 'Y'))))\n",
       " \n",
       "print str(len(nbs_annot[(nbs_annot['predictive'] == True)])) + \" variants labeled as predictive.\""
      ],
@@ -712,7 +712,7 @@
       "parents = nbs_annot[(nbs_annot['member'] == 'M' )| (nbs_annot['member'] == 'F')]\n",
       "parents_dom = parents[((parents['inheritance'] == 'AD') & (parents['predictive'] == True))]\n",
       "parents_dom.name = 'parents_dom'\n",
-      "parents_rec = parents[((parents['inheritance'] == 'AR') & (parents['predictive'] == True))]\n",
+      "parents_rec = parents[((parents['inheritance'] == 'AR') & (parents['gt'] == '1/1') & (parents['predictive'] == True))]\n",
       "parents_rec.name = 'parents_rec'"
      ],
      "language": "python",
@@ -737,24 +737,36 @@
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
-     "outputs": [],
+     "outputs": [
+      {
+       "ename": "NameError",
+       "evalue": "name 'nbs_annot' is not defined",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+        "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-11-932301339b90>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# create a subset of exact trios\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m trios = nbs_annot.groupby('family_id').filter(lambda g: g.sample_id.nunique() == 3 and\n\u001b[0m\u001b[1;32m      3\u001b[0m                                               'M' in g.values and 'F' in g.values and 'NB' in g.values)\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mtrios\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'sample_id'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;31mNameError\u001b[0m: name 'nbs_annot' is not defined"
+       ]
+      }
+     ],
      "input": [
-      "# subset nb het variants for comp_het analysis\n",
-      "nb_het = newborns[((newborns['inheritance'] == 'AR') & (newborns['gt'] == '0/1') & (newborns['predictive'] == True))]\n",
-      "\n",
       "# create a subset of exact trios\n",
       "trios = nbs_annot.groupby('family_id').filter(lambda g: g.sample_id.nunique() == 3 and\n",
       "                                              'M' in g.values and 'F' in g.values and 'NB' in g.values)\n",
-      "# convert back to a dataframe\n",
-      "trio_df = pd.concat([trios]).drop_duplicates().reset_index(drop=True)\n",
       "\n",
-      "# create a subset for parents with multiple nb \n",
-      "multi_nbs = nbs_annot.groupby('family_id').filter(lambda g: g[(g['member'] == 'NB')].sample_id.nunique() > 1)\n",
-      "\n",
-      "#nb_only = nbs_annot.groupby('family_id').filter(lambda g: g.sample_id.nunique() < 3 and 'NB' in g.values)"
+      "print trios['sample_id'].unique()\n",
+      "# # convert back to a dataframe\n",
+      "# trio_df = pd.concat([trios]).drop_duplicates().reset_index(drop=True)\n",
+      "# \n",
+      "# # create a subset for parents with multiple nb \n",
+      "# multi_nbs = nbs_annot.groupby('family_id').filter(lambda g: g[(g['member'] == 'NB')].sample_id.nunique() > 1)\n",
+      "# \n",
+      "# # keep only het predictive newborn variants\n",
+      "# nb_het = newborns[((newborns['inheritance'] == 'AR') & (newborns['gt'] == '0/1') & (newborns['predictive'] == True))]"
      ],
      "language": "python",
-     "prompt_number": 354
+     "prompt_number": 11
     },
     {
      "cell_type": "markdown",
@@ -780,7 +792,8 @@
       "# # keep only heterozygous parent variants, as homozygous parents are not of interest\n",
       "# mom_het = mothers.loc[mothers['gt'] == '0/1']\n",
       "# dad_het = fathers.loc[fathers['gt'] == '0/1']\n",
-      "#            \n",
+      "\n",
+      "          \n",
       "# function to find matching parent variants\n",
       "def find_parent_vars(nb_df, parent_df):\n",
       "    # merge dataframes on variant id\n",
@@ -792,20 +805,19 @@
       "    #remove _x from colnames\n",
       "    merged_df.rename(columns=lambda x: x.replace('_x', ''), inplace=True)\n",
       "    return merged_df\n",
-      "#     \n",
-      "# # run function on trios\n",
-      "# if (len(mom_het) > 0) and (len(dad_het) > 0):\n",
-      "#     nb_and_mom = find_parent_vars(trio_df, mom_het)\n",
-      "#     nb_and_dad = find_parent_vars(trio_df, dad_het)\n",
-      "#     # merge variants found in either mother or father\n",
-      "#     het_cands = pd.concat([nb_and_mom,nb_and_dad]).drop_duplicates().reset_index(drop=True)\n",
-      "#     # group variants by gene name\n",
-      "#     trio_by_gene = het_cands.groupby(['gene', 'family_id'])\n",
-      "# else:\n",
-      "#     print \"No compound het variants\"\n",
+      "    \n",
+      "# run function on trios\n",
+      "if (len(mom_het) > 0) and (len(dad_het) > 0):\n",
+      "    nb_and_mom = find_parent_vars(trio_df, mom_het)\n",
+      "    nb_and_dad = find_parent_vars(trio_df, dad_het)\n",
+      "    # merge variants found in either mother or father\n",
+      "    het_cands = pd.concat([nb_and_mom,nb_and_dad]).drop_duplicates().reset_index(drop=True)\n",
+      "    # group variants by gene name\n",
+      "    trio_by_gene = het_cands.groupby(['gene', 'family_id'])\n",
+      "else:\n",
+      "    print \"No compound het variants\"\n",
       "    \n",
       "# run function for families with multiple nb's\n",
-      "\n",
       "# create a list of nb multi sample id's\n",
       "multi_list = []\n",
       "for id in multi_nbs['sample_id'][(multi_nbs['member'] == 'NB')].unique():\n",
@@ -819,11 +831,8 @@
       "    het_cands = pd.concat([nb_and_mom,nb_and_dad]).drop_duplicates().reset_index(drop=True)\n",
       "    new_df = multi_cands.append(het_cands)\n",
       "    # group variants by gene name\n",
-      "test = pd.concat(multi_cands)\n",
-      "#multi_by_gene = het_cands.groupby(['gene', 'family_id'])\n",
-      "\n",
-      "\n",
-      "print test['sample_id'].unique()"
+      "multi_df = pd.concat(multi_cands)\n",
+      "multi_by_gene = multi_df.groupby(['gene', 'family_id'])"
      ],
      "language": "python",
      "prompt_number": 406
