finished clarity acmg and clivnar

--- a/nbs_genes/acmg_genes_clarity.ipynb
+++ b/nbs_genes/acmg_genes_clarity.ipynb
@@ -64,7 +64,10 @@
       "## family id ##\n",
       "###############\n",
       "# uncomment for list \n",
-      "sample_list = '08-01_PG0001705-BLD','08-04_PG0001704-BLD','08-05_PG0001706-BLD','05-02_PG0003573-BLD','05-03_PG0003565-BLD','05-01_PG0003524-BLD','07-02_PG0001692-BLD','07-03_PG0001693-BLD','07-01_PG0002918-DNA','06-02_PG0001697-BLD','06-03_PG0001698-BLD','06-01_PG0001696-BLD'\n",
+      "sample_list = '08-01_PG0001705-BLD','08-04_PG0001704-BLD','08-05_PG0001706-BLD',\\\n",
+      "              '05-02_PG0003573-BLD','05-03_PG0003565-BLD','05-01_PG0003524-BLD',\\\n",
+      "              '07-02_PG0001692-BLD','07-03_PG0001693-BLD','07-01_PG0002918-DNA',\\\n",
+      "              '06-02_PG0001697-BLD','06-03_PG0001698-BLD','06-01_PG0001696-BLD'\n",
       "\n",
       "####################\n",
       "## trio member(s) ##\n",
