finished nbs genes and acmg genes, need to autmoate acmg

--- a/nbs_genes/nbs_genes_clarity.ipynb
+++ b/nbs_genes/nbs_genes_clarity.ipynb
@@ -808,7 +808,15 @@
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
-     "outputs": [],
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "No comp hets found.\n"
+       ]
+      }
+     ],
      "input": [
       "# function to find compound hets\n",
       "def find_comphets(gene_group, comphet_list_name):\n",
@@ -827,19 +835,31 @@
       "# create empty list to store comp_hets\n",
       "comp_hets = []\n",
       "\n",
-      "if len(by_gene) > 0:\n",
-      "    # run function on by_gene\n",
-      "    find_comphets(by_gene, comp_hets)\n",
-      "    # combine results into dataframe\n",
+      "het1_df = find_comphets(het1_grouped, comp_hets)     \n",
+      "het2_df = find_comphets(het2_grouped, comp_hets)\n",
+      "het3_df = find_comphets(het3_grouped, comp_hets)\n",
+      "\n",
+      "# check if comphets found\n",
+      "def comphet_check(df):\n",
+      "    if df:\n",
+      "        comp_hets.append(df)\n",
+      "\n",
+      "# check for each nb df\n",
+      "comphet_check(het1_df)\n",
+      "comphet_check(het2_df)\n",
+      "comphet_check(het3_df)\n",
+      "\n",
+      "# if any comp  hets were found, append to list and convert to df\n",
+      "if len(comp_hets) > 0:\n",
       "    comphet_df = pd.concat(comp_hets)\n",
       "    comphet_df.name = 'comp_het'\n",
       "else:\n",
-      "    print 'No compound het variants found.'\n",
+      "    print 'No comp hets found.'\n",
       "    comphet_df = pd.DataFrame()\n",
       "    comphet_df.name = 'comp_het'"
      ],
      "language": "python",
-     "prompt_number": 75
+     "prompt_number": 55
     },
     {
      "cell_type": "heading",
