--- a/nbs_genes/nbs_pipeline..ipynb
+++ b/nbs_genes/nbs_pipeline..ipynb
@@ -40,7 +40,7 @@
       "di.display_html('''<button onclick=\"jQuery('.input_area').toggle(); jQuery('.prompt').toggle();\">Toggle code</button>''', raw=True)"
      ],
      "language": "python",
-     "prompt_number": 28
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -96,13 +96,13 @@
       "dbnfsp_table = 'p7_ref_grch37.dbnsfp_variant'\n",
       "\n",
       "# enter path to snpEff.jar on your computer\n",
-      "#snpeff_path = '/Users/summerrae/tools/snpEff/snpEff.jar'\n",
-      "snpeff_path = 'D:/Documents/tools/snpEff/snpEff.jar'\n",
+      "snpeff_path = '/Users/summerrae/tools/snpEff/snpEff.jar'\n",
+      "#snpeff_path = 'D:/Documents/tools/snpEff/snpEff.jar'\n",
       "# enter desired basename for output files\n",
       "out_name = 'nbs_' + time.strftime(\"%y%m%d\")"
      ],
      "language": "python",
-     "prompt_number": 63
+     "prompt_number": 6
     },
     {
      "cell_type": "heading",
@@ -211,7 +211,7 @@
       "    subject_statement = ''"
      ],
      "language": "python",
-     "prompt_number": 64
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -427,7 +427,7 @@
       "conn.close()"
      ],
      "language": "python",
-     "prompt_number": 78
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -449,7 +449,7 @@
       "    print \"No variants located in NBS regions.\""
      ],
      "language": "python",
-     "prompt_number": 79
+     "prompt_number": 4
     },
     {
      "cell_type": "heading",
@@ -500,7 +500,7 @@
       "    print str(e)"
      ],
      "language": "python",
-     "prompt_number": 82
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -518,7 +518,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "38157 variants annotated for coding consequences.\n"
+        "38439 variants annotated for coding consequences.\n"
        ]
       }
      ],
@@ -592,7 +592,7 @@
       "print str(len(nbs_annot)) + \" variants annotated for coding consequences.\""
      ],
      "language": "python",
-     "prompt_number": 84
+     "prompt_number": 9
     },
     {
      "cell_type": "heading",
@@ -612,15 +612,15 @@
       "\n",
       "- SnpEff effect = High  \n",
       "- sift_pred = D  \n",
-      "- polyphen2_hdiv_pred = D  \n",
-      "- polyphen2_hvar_pred= D  \n",
-      "- mutation_taster_pred= D  \n",
-      "- mutation_assessor_pred = H  \n",
-      "- fathmm_pred = D  \n",
-      "- provean_pred = D  \n",
-      "- cadd_raw = provided for reference only  \n",
-      "- dann_score = above user-specified cutoff  \n",
-      "- exac_af = provided for reference only  "
+      "- polyphen2_ hdiv _pred = D  \n",
+      "- polyphen2_ hvar _pred= D  \n",
+      "- mutation_ taster _pred= D  \n",
+      "- mutation_ assessor _pred = H  \n",
+      "- fathmm_ pred = D  \n",
+      "- provean_ pred = D  \n",
+      "- cadd_ raw = provided for reference only  \n",
+      "- dann_ score = above user-specified cutoff  \n",
+      "- exac_ af = provided for reference only  "
      ]
     },
     {
@@ -632,19 +632,21 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "5722 variants labeled as predictive.\n"
+        "5772 variants labeled as predictive.\n"
        ]
       }
      ],
      "input": [
       "# label variants considered pathogenic \n",
-      "nbs_annot['predictive'] = ((nbs_annot['clin_patho'] == 'Y') | ((nbs_annot['kaviar_rare'] == 'Y') & \n",
-      "                            ((nbs_annot['impact'] == 'HIGH') | (nbs_annot['dbnfsp_predicted'] == 'Y'))))\n",
+      "nbs_annot['predictive'] = ((nbs_annot['clin_patho'] == 'Y') | \n",
+      "                           ((nbs_annot['kaviar_rare'] == 'Y') & \n",
+      "                           ((nbs_annot['impact'] == 'HIGH') \n",
+      "                           | (nbs_annot['dbnfsp_predicted'] == 'Y'))))\n",
       " \n",
       "print str(len(nbs_annot[(nbs_annot['predictive'] == True)])) + \" variants labeled as predictive.\""
      ],
      "language": "python",
-     "prompt_number": 85
+     "prompt_number": 11
     },
     {
      "cell_type": "heading",
@@ -683,7 +685,7 @@
       "nb_het3 = nbs_annot[((nbs_annot['member'] == 'NB3') & (nbs_annot['gt'] == '0/1'))]"
      ],
      "language": "python",
-     "prompt_number": 115
+     "prompt_number": 12
     },
     {
      "cell_type": "heading",
@@ -714,17 +716,10 @@
       "\n",
       "nb_hom_recessive = nbs_annot[((nbs_annot['inheritance'] == 'AR') & (nbs_annot['gt'] == '1/1') & \n",
       "                              (nbs_annot['predictive'] == True))]\n",
-      "nb_hom_recessive.name = 'hom_recessive'\n",
-      "\n",
-      "# subset parent variants by MOI and/or zygosity\n",
-      "parents = nbs_annot[(nbs_annot['member'] == 'M' )| (nbs_annot['member'] == 'F')]\n",
-      "parents_dom = parents[((parents['inheritance'] == 'AD') & (parents['predictive'] == True))]\n",
-      "parents_dom.name = 'parents_dom'\n",
-      "parents_rec = parents[((parents['inheritance'] == 'AR') & (parents['gt'] == '1/1') & (parents['predictive'] == True))]\n",
-      "parents_rec.name = 'parents_rec'"
+      "nb_hom_recessive.name = 'hom_recessive'"
      ],
      "language": "python",
-     "prompt_number": 116
+     "prompt_number": 13
     },
     {
      "cell_type": "heading",
@@ -778,7 +773,7 @@
       "het3_grouped = match_parents(nb_het3)"
      ],
      "language": "python",
-     "prompt_number": 117
+     "prompt_number": 14
     },
     {
      "cell_type": "markdown",
@@ -834,7 +829,7 @@
       "    comphet_df.name = 'comp_het'"
      ],
      "language": "python",
-     "prompt_number": 112
+     "prompt_number": 15
     },
     {
      "cell_type": "heading",
@@ -853,7 +848,14 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Variants found:\n78 dominant variants found.\nCondition: \nPallister-Hall syndrome 2                    46\nHypothyroidism: congenital: nongoitrous 2    32\ndtype: int64 \n\nAffected gene(s): \n['PAX8' 'GLI2'] \n\n1808 hom_recessive variants found.\nCondition: \nHyperprolinemia: type I                                         1080\nAdrenal hyperplasia: congenital: due to 21-hydroxylase deficiency: Hyperandrogenism: nonclassic type: due to 21-hydroxylase deficiency     340\nSevere combined immunodeficiency: autosomal recessive: T-cell negative: B-cell positive: NK cell positive     180\nTyrosinemia: type III                                            104\nMaple syrup urine disease: type II                                60\nSevere combined immunodeficiency                                  30\nLIG4 syndrome: Severe combined immunodeficiency with sensitivity to ionizing radiation       6\nProlidase deficiency                                               5\nGlutathione synthetase deficiency                                  3\ndtype: int64 \n\nAffected gene(s): \n['PRODH' 'MTHFD1' 'CYP21A2' 'DBT' 'IL7R' 'HPD' 'GSS' 'PEPD' 'LIG4'] \n\n13314 comp_het variants found.\nCondition: \nThyroid dyshormonogenesis 2A                                    1836\nWilson disease                                                  1549\nThyroid dyshormonogenesis 3                                     1541\nAdrenal hyperplasia: congenital: due to 21-hydroxylase deficiency: Hyperandrogenism: nonclassic type: due to 21-hydroxylase deficiency     854\nHomocystinuria-megaloblastic anemia: cobalamin E type            852\nHyperprolinemia: type I                                          835\nAlpha-1-antitrypsin deficiency                                   464\nCystic fibrosis                                                  431\nGlycogen storage disease II (Pompe disease)                      416\nPallister-Hall syndrome 2                                        376\nGlutamate formiminotransferase deficiency                        360\n  Mucopolysaccharidosis: type Ih (Hurler syndrome)               252\nNiemann-Pick disease: type C1: Niemann-Pick disease: type D      240\nMethylmalonic acidemia: cblB type                                221\nGM1-gangliosidosis: types I: II: and III: Mucopolysaccharidosis: type IVB (Morquio syndrome B)     220\nTranscobalamin II deficiency                                     198\nKrabbe disease                                                   194\nOmenn syndrome: Severe combined immunodeficiency with sensitivity to ionizing radiation     179\nCombined malonic and methylmalonic aciduria                      177\nHomocystinuria                                                   177\nMucopolysaccharidosis: type VI (Maroteaux-Lamy syndrome)         176\nThyroid dyshormonogenesis 6                                      173\nMitochondrial DNA depletion syndrome 5 (Succinate-CoA ligase deficiency)     147\nSevere combined immunodeficiency: autosomal recessive: T-cell negative: B-cell positive: NK cell positive     146\nNiemann-Pick disease: type A: Niemann-Pick disease: type B       144\nCarbamoylphosphate synthetase I deficiency                       124\nHypothyroidism: congenital: nongoitrous: 1                       115\nSevere combined immunodeficiency                                  94\nProlidase deficiency                                              87\nThyroid dyshormonogenesis 4                                       86\nMultiple acyl-CoA dehydrogenase deficiency: Glutaric aciduria IIB      61\nMethylmalonyl-CoA epimerase deficiency                            60\nT cell-negative: B cell-negative: natural killer cell-positive severe combined immunodeficiency: Omenn syndrome: Alpha/beta T-cell lymphopenia with gamma/delta T-cell expansion: severe cytomegalovirus infection: and autoimmunity: Combined cellular and humoral immune defects with granulomas      54\nT-cell immunodeficiency: congenital alopecia: and nail dystrophy      52\nMaple syrup urine disease: type Ia                                47\n2-methylbutyryl-CoA dehydrogenase deficiency                      46\nHyperprolinemia: type II                                          40\nMethylmalonic acidemia: cblG type                                 36\nLIG4 syndrome: Severe combined immunodeficiency with sensitivity to ionizing radiation      30\nCarnitine palmitoyltransferase II deficiency                      26\nAcyl-CoA dehydrogenase: short-chain: deficiency of                24\nIsovaleric acidemia                                               24\n5-oxoprolinase deficiency                                         24\nMethylmalonic acidemia due to methylmalonyl-CoA mutase deficiency      22\nT-cell immunodeficiency syndrome: recurrent infections: autoimmunity: with or without cardiac malformations      19\nHypothyroidism: congenital: nongoitrous 2                         16\nPropionic acidemia                                                14\nN/A                                                               13\n11-beta-hydroxylase deficiency                                    13\nNiemann-pick disease: type C2                                     11\nOmenn syndrome: Combined cellular and humoral immune defects with granulomas        9\nCarnitine palmitoyltransferase 1A deficiency                       9\nLength: 52, dtype: int64 \n\nAffected gene(s): \n['ACADL' 'ACADS' 'ACADSB' 'ACSF3' 'ALDH4A1' 'ARSB' 'ATP7B' 'BCKDHA' 'CFTR'\n 'CPS1' 'CPT1A' 'CPT2' 'CYP11B1' 'CYP21A2' 'DCLRE1C' 'DUOX2' 'ETFB' 'FOXN1'\n 'FTCD' 'GAA' 'GALC' 'GLB1' 'GLI2' 'IDUA' 'IL7R' 'IVD' 'IYD' 'LIG4' 'MCEE'\n 'MMAB' 'MTHFD1' 'MTHFR' 'MTR' 'MTRR' 'MUT' 'NPC1' 'NPC2' 'OPLAH' 'PAX8'\n 'PCCA' 'PEPD' 'PRODH' 'RAG1' 'RAG2' 'SERPINA1' 'SMPD1' 'STK4' 'SUCLA2'\n 'TCN2' 'TG' 'TPO' 'TSHR'] \n\n\n\n"
+        "Variants found:\n78 dominant variants found.\nCondition: \nPallister-Hall syndrome 2                    46\nHypothyroidism: congenital: nongoitrous 2    32\ndtype: int64"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " \n\nAffected gene(s): \n['PAX8' 'GLI2'] \n\n1808 hom_recessive variants found.\nCondition: \nHyperprolinemia: type I                                         1080\nAdrenal hyperplasia: congenital: due to 21-hydroxylase deficiency: Hyperandrogenism: nonclassic type: due to 21-hydroxylase deficiency     340\nSevere combined immunodeficiency: autosomal recessive: T-cell negative: B-cell positive: NK cell positive     180\nTyrosinemia: type III                                            104\nMaple syrup urine disease: type II                                60\nSevere combined immunodeficiency                                  30\nLIG4 syndrome: Severe combined immunodeficiency with sensitivity to ionizing radiation       6\nProlidase deficiency                                               5\nGlutathione synthetase deficiency                                  3\ndtype: int64 \n\nAffected gene(s): \n['PRODH' 'MTHFD1' 'CYP21A2' 'DBT' 'IL7R' 'HPD' 'GSS' 'PEPD' 'LIG4'] \n\n10666 comp_het variants found.\nCondition: \nThyroid dyshormonogenesis 2A                                    1648\nWilson disease                                                  1549\nThyroid dyshormonogenesis 3                                     1515\nHyperprolinemia: type I                                          874\nAdrenal hyperplasia: congenital: due to 21-hydroxylase deficiency: Hyperandrogenism: nonclassic type: due to 21-hydroxylase deficiency     804\nHomocystinuria-megaloblastic anemia: cobalamin E type            690\nGlycogen storage disease II (Pompe disease)                      398\nPallister-Hall syndrome 2                                        376\nCystic fibrosis                                                  341\nAlpha-1-antitrypsin deficiency                                   318\n  Mucopolysaccharidosis: type Ih (Hurler syndrome)               238\nNiemann-Pick disease: type C1: Niemann-Pick disease: type D      206\nCombined malonic and methylmalonic aciduria                      170\nGlutamate formiminotransferase deficiency                        168\nTranscobalamin II deficiency                                     166\nSevere combined immunodeficiency: autosomal recessive: T-cell negative: B-cell positive: NK cell positive     134\nThyroid dyshormonogenesis 6                                      133\nNiemann-Pick disease: type A: Niemann-Pick disease: type B       120\nHomocystinuria                                                    89\nCarbamoylphosphate synthetase I deficiency                        80\nMethylmalonic acidemia: cblB type                                 76\nThyroid dyshormonogenesis 4                                       60\nSevere combined immunodeficiency                                  58\nKrabbe disease                                                    54\nOmenn syndrome: Severe combined immunodeficiency with sensitivity to ionizing radiation      45\nT-cell immunodeficiency: congenital alopecia: and nail dystrophy      44\nHypothyroidism: congenital: nongoitrous: 1                        43\nMitochondrial DNA depletion syndrome 5 (Succinate-CoA ligase deficiency)      37\nProlidase deficiency                                              37\nMultiple acyl-CoA dehydrogenase deficiency: Glutaric aciduria IIB      33\nMucopolysaccharidosis: type VI (Maroteaux-Lamy syndrome)          33\n2-methylbutyryl-CoA dehydrogenase deficiency                      28\nT cell-negative: B cell-negative: natural killer cell-positive severe combined immunodeficiency: Omenn syndrome: Alpha/beta T-cell lymphopenia with gamma/delta T-cell expansion: severe cytomegalovirus infection: and autoimmunity: Combined cellular and humoral immune defects with granulomas      24\nLIG4 syndrome: Severe combined immunodeficiency with sensitivity to ionizing radiation      18\nCarnitine palmitoyltransferase II deficiency                      18\nMethylmalonic acidemia due to methylmalonyl-CoA mutase deficiency      14\nAcyl-CoA dehydrogenase: short-chain: deficiency of                12\nIsovaleric acidemia                                                6\nN/A                                                                5\n11-beta-hydroxylase deficiency                                     4\ndtype: int64 \n\nAffected gene(s): \n['ACADL' 'ACADS' 'ACADSB' 'ACSF3' 'ARSB' 'ATP7B' 'CFTR' 'CPS1' 'CPT2'\n 'CYP11B1' 'CYP21A2' 'DCLRE1C' 'DUOX2' 'ETFB' 'FOXN1' 'FTCD' 'GAA' 'GALC'\n 'GLI2' 'IDUA' 'IL7R' 'IVD' 'IYD' 'LIG4' 'MMAB' 'MTHFD1' 'MTHFR' 'MTRR'\n 'MUT' 'NPC1' 'PEPD' 'PRODH' 'RAG1' 'SERPINA1' 'SMPD1' 'SUCLA2' 'TCN2' 'TG'\n 'TPO' 'TSHR'] \n\n\n\n"
        ]
       }
      ],
@@ -876,7 +878,7 @@
       "print \"\\n\""
      ],
      "language": "python",
-     "prompt_number": 118
+     "prompt_number": 16
     },
     {
      "cell_type": "heading",
@@ -895,7 +897,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Saving 78 dominant variants to current working directory\nSaving 1808 hom_recessive variants to current working directory\nSaving 13314 comp_het variants to current working directory\n"
+        "Saving 78 dominant variants to current working directory\nSaving 1808 hom_recessive variants to current working directory\nSaving 10666 comp_het variants to current working directory\n"
        ]
       }
      ],
@@ -932,7 +934,7 @@
       "merge_df.to_csv('predicted_NBS_{}.csv'.format(time.strftime(\"%y%m%d\")), header=True, encoding='utf-8', index=False)"
      ],
      "language": "python",
-     "prompt_number": 114
+     "prompt_number": 17
     },
     {
      "cell_type": "heading",
@@ -956,9 +958,23 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "- reorder columns  \n",
       "- make package\n",
-      "- change location of tab2vcf.py function according to location in package"
+      "- change location of tab2vcf.py function according to location in package\n",
+      "- report only nb vars\n",
+      "- mark with variant type\n",
+      "- why is sample id _22 showing up? "
      ]
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      ""
+     ],
+     "language": "python"
     }
    ]
   }
