converted vcf writer script to function

--- a/nbs_genes/nbs_pipeline..ipynb
+++ b/nbs_genes/nbs_pipeline..ipynb
@@ -96,13 +96,13 @@
       "dbnfsp_table = 'p7_ref_grch37.dbnsfp_variant'\n",
       "\n",
       "# enter path to snpEff.jar on your computer\n",
-      "#snpeff_path = '/Users/selasady/tools/snpEff/snpEff.jar'\n",
-      "snpeff_path = 'D:/Documents/tools/snpEff/snpEff.jar'\n",
+      "snpeff_path = '/Users/summerrae/tools/snpEff/snpEff.jar'\n",
+      "#snpeff_path = 'D:/Documents/tools/snpEff/snpEff.jar'\n",
       "# enter desired basename for output files\n",
       "out_name = 'nbs_' + time.strftime(\"%y%m%d\")"
      ],
      "language": "python",
-     "prompt_number": 2
+     "prompt_number": 12
     },
     {
      "cell_type": "heading",
@@ -179,21 +179,13 @@
       "pd.options.mode.chained_assignment = None"
      ],
      "language": "python",
-     "prompt_number": 3
+     "prompt_number": 53
     },
     {
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "The following argument will be added to the query: \n\n AND (bv.sample_id LIKE '%03' OR bv.sample_id LIKE '%01' OR bv.sample_id LIKE '%02')\n"
-       ]
-      }
-     ],
+     "outputs": [],
      "input": [
       "# parse trio arg\n",
       "member_arg = pimp.label_member('bv', trio_member)\n",
@@ -391,7 +383,7 @@
       "conn.close()"
      ],
      "language": "python",
-     "prompt_number": 4
+     "prompt_number": 56
     },
     {
      "cell_type": "code",
@@ -413,7 +405,7 @@
       "    print \"No variants located in NBS regions.\""
      ],
      "language": "python",
-     "prompt_number": 5
+     "prompt_number": 57
     },
     {
      "cell_type": "heading",
@@ -434,7 +426,64 @@
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
+     "outputs": [
+      {
+       "output_type": "pyout",
+       "prompt_number": 47,
+       "text": [
+        "<module 'parse_impala.parse_impala' from 'parse_impala/parse_impala.pyc'>"
+       ],
+       "metadata": {}
+      }
+     ],
+     "input": [
+      "reload(pimp)"
+     ],
+     "language": "python",
+     "prompt_number": 47
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
      "outputs": [],
+     "input": [
+      "# rename 'geno' to 'gt' for vcf output\n",
+      "nbs_df = nbs_df.rename(columns = {'geno':'gt'})\n",
+      "\n",
+      "vcf_header = \"\"\"##fileformat=VCFv4.0\n",
+      "##fileDate={}\n",
+      "##reference=grch37v47\n",
+      "\"\"\".format(time.strftime(\"%y%m%d\"))\n",
+      "\n",
+      "vcf = nbs_df[['chrom', 'pos', 'var_id', 'ref', 'alt', 'qual', 'filter']]\n",
+      "vcf['INFO'] = '.'\n",
+      "vcf['FORMAT'] = 'GT'\n",
+      "vcf['GT'] = nbs_df['gt']\n",
+      "vcf.columns = ['#CHROM', 'POS', 'ID', 'REF', 'ALT', 'QUAL', 'FILTER', 'INFO', 'FORMAT', 'GT']\n",
+      "\n",
+      "f = open('test.vcf', 'wb') \n",
+      "f.write(vcf_header)\n",
+      "f.close()\n",
+      "\n",
+      "vcf.head().to_csv('test.vcf', sep='\\t', mode='a', index=False)"
+     ],
+     "language": "python",
+     "prompt_number": 109
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "global name 'args' is not defined\n"
+       ]
+      }
+     ],
      "input": [
       "# rename 'geno' to 'gt' for vcf output\n",
       "nbs_df = nbs_df.rename(columns = {'geno':'gt'})\n",
@@ -446,7 +495,7 @@
       "    print str(e)"
      ],
      "language": "python",
-     "prompt_number": 18
+     "prompt_number": 58
     },
     {
      "cell_type": "markdown",
